# fmu-platform

./: .env.example  .env.staging.example  .gitignore  CLAUDE.md  Caddyfile  HeatingAmbientLoop_TwoBuldnings_.june.data  check-licenses.sh  deploy-staging.sh  deploy.sh  docker-compose.staging.yml  docker-compose.yml  setup-staging.sh  setup.sh  test-license-count.sh
admin/: index.html  package.json  tailwind.config.js  vite.config.ts
backend/: .dockerignore  CLAUDE.md  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1ac7ac23bb4d_initial_tables.py  a2b3c4d5e6f7_add_users_table.py  b3c4d5e6f7g8_add_is_admin_to_users.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/core/: auth.py  security.py
backend/app/models/: __init__.py  base.py  fmu_library.py  job.py  project.py  user.py
backend/app/routes/: admin.py  auth.py  fmu_library.py  jobs.py  projects.py  websocket.py
backend/app/schemas/: auth.py  job.py  project.py  topology.py
backend/engine/: __init__.py  composition.py  connection_resolver.py  fmu_utils.py  manifest.py  parameterizer.py  ssp_generator.py  topology_parser.py  validator.py  weather_data.py
backend/simulation/: cosim_master.py  cosim_test.py  results.py  runner.py  solver_config.py  subprocess_worker.py
backend/tests/: conftest.py  test_connection_resolver.py  test_ssp_generator.py  test_topology_parser.py  test_validator.py
backend/tests/test_api/: test_jobs.py  test_projects.py
backend/workers/: celery_app.py  license_manager.py  tasks.py
(+50 files in other folders)
